# VCS

./: Cargo.toml
src/: command_parser.rs  json_files.rs  lib.rs  main.rs  repo_file_manager.rs  vcs_state_manager.rs
src/commands/: commit.rs  init.rs  jump.rs  log.rs  merge.rs  new_branch.rs  status.rs
tests/: integratoon_tests.rs  tests.rs  unit_tests.rs
