[package]
name = "vcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.13", features = ["derive"] }
serde = { version = "1.0.145", features = ["derive"] }
walkdir = "2"
sha1 = "0.10.5"
serde_with = "2.0.1"
serde_json = "1.0.86"
chrono = "0.4.22"
